# content-ingestion-wsl-processor

./: .env.example  .gitignore  CODE_REVIEW.md  README.md  main.py  pyproject.toml
docs/: architecture.md  code-review-2026-03-12.md  cross-repo-collaboration.md  inbox-protocol.md  llm-interaction-contract-2026-03-16.md  prd.md  project-status.md  review-fixes-2026-03-12.md  round2-llm-handoff-2026-03-16.md  round2-wsl-processing-plan-2026-03-15.md  windows-exporter-checklist.md  windows-job-export.md  windows-kickoff-plan.md  wsl-e2e-guide.md  wsl-mvp-plan.md
src/content_ingestion/app/: bootstrap.py  cli.py  service.py
src/content_ingestion/core/: config.py  enums.py  evidence.py  exceptions.py  models.py
src/content_ingestion/inbox/: __init__.py  processor.py  protocol.py  watcher.py
src/content_ingestion/normalize/: cleaning.py  markdown.py  metadata.py
src/content_ingestion/pipeline/: __init__.py  llm_contract.py  llm_pipeline.py  media_pipeline.py  openclaw_adapter.py  visual_summary.py
src/content_ingestion/raw/: __init__.py  common.py  html_parser.py  image_parser.py  (+4 more)
tests/fixtures/: wechat_article.html
tests/unit/: test_analyze_image_asset.py  test_artifact_store.py  test_cli_shared_root.py  test_config.py  test_image_parser.py  test_inbox_processor.py  test_inbox_protocol.py  test_inbox_watcher.py  test_llm_pipeline.py  test_llm_sampling.py  test_pdf_parser.py  test_processor.py  test_raw_parsers.py  test_resolver.py  test_session_store.py  test_validate_commands.py  test_visual_summary.py  test_wechat_extractor.py  test_wechat_parser.py
(+16 files in other folders)
