[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-ingestion"
version = "0.1.0"
description = "Authorized content ingestion layer for OpenClaw"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.52.0",
]

[project.optional-dependencies]
analysis = [
  "openai>=1.0.0",
]
dev = [
  "pytest>=8.3.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.11.0",
]

[project.scripts]
content-ingestion = "content_ingestion.app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
